Fix renaming of combined fragment sections' names

The text displayed in the first and second section of a combined fragment
widget are stored in the text variable, which was not set by the
ClassGeneralPage::apply method. This commit fixes this method's logic.

Differential Revision: https://phabricator.kde.org/D6846
FIXED-IN:2.23.0 (KDE Applications 17.08.0)
BUG:382279
BUG:382282