umbrello/dialogs/pages/classgeneralpage.h
@@ -96,6 +96,7 @@ private:
     VisibilityEnumWidget *m_visibilityEnumWidget;
 
     void insertStereotypesSorted(const QString& type);
+    void setInstanceWidgetNameIfApplicable(const QString& name) const;
 
 public slots:
 
